Added the rest of the jornal routes
